# charset_normalizer

./: profile.html  profile.json  profile_charset_normalizer_3.3.1.html  profile_storing_sequences.html  pyproject.toml
charset_normalizer/: api.py  memory_profile_test.py
tests/: memory_profiling.md  test_full_detection.py
